# pybatch99

./: LICENSE  README.md  pyproject.toml  setup.py
pybatch99/: core.py
pybatch99.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: inpython.py  newwindow.py
